<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".GamePhaseActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_pattern_repeat"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvPlayerOneIndicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/player_indicator_black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/rlPlayerOneScoreView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPlayerOneName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="PlayerOne"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/rlPlayerOneScoreView"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rlPlayerOneScoreView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/rlPlayerTwoScoreView"
        app:layout_constraintStart_toEndOf="@+id/tvPlayerOneName"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivPlayerOneScoreBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_circle_black" />

        <TextView
            android:id="@+id/tvPlayerOneScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ivPlayerOneScoreBackground"
            android:layout_alignTop="@+id/ivPlayerOneScoreBackground"
            android:layout_alignEnd="@+id/ivPlayerOneScoreBackground"
            android:layout_alignBottom="@+id/ivPlayerOneScoreBackground"
            android:layout_margin="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:gravity="center"
            android:text="2"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlPlayerTwoScoreView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/tvPlayerTwoName"
        app:layout_constraintStart_toEndOf="@+id/rlPlayerOneScoreView"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivPlayerTwoScoreBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_circle_white" />

        <TextView
            android:id="@+id/tvPlayerTwoScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ivPlayerTwoScoreBackground"
            android:layout_alignTop="@+id/ivPlayerTwoScoreBackground"
            android:layout_alignEnd="@+id/ivPlayerTwoScoreBackground"
            android:layout_alignBottom="@+id/ivPlayerTwoScoreBackground"
            android:layout_margin="1dp"
            android:gravity="center"
            android:text="2"
            android:textColor="@color/colorBlack" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvPlayerTwoIndicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/player_indicator_white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rlPlayerTwoScoreView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPlayerTwoName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="PlayerTwo"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rlPlayerTwoScoreView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPlayerOneImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toStartOf="@+id/ivPlayerTwoImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlPlayerOneScoreView"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ivPlayerTwoImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivPlayerOneImage"
        app:layout_constraintTop_toBottomOf="@+id/rlPlayerTwoScoreView"
        tools:srcCompat="@tools:sample/avatars" />

    <fragment
        android:id="@+id/gameFragment"
        android:name="com.example.rmcsilva.reverisectest.GameActionFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnExtraMove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayerOneImage" />

    <ImageButton
        android:id="@+id/btnExtraMove"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:src="@drawable/ic_loop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,2:1"
        app:layout_constraintEnd_toStartOf="@+id/btnSettings"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/extraMoveDescription"
        android:onClick="onExtraMove"/>

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:src="@drawable/ic_cog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,2:1"
        app:layout_constraintEnd_toStartOf="@+id/btnPassMove"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnExtraMove"
        android:contentDescription="@string/settingsDescription" />

    <ImageButton
        android:id="@+id/btnPassMove"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:src="@drawable/ic_next2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSettings"
        android:contentDescription="@string/passMoveDescription"
        android:onClick="onSkipMove"/>

</android.support.constraint.ConstraintLayout>